--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bookmark-directory"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Luku <luku.3659@gmail.com>"]
 edition = "2018"
 
@@ -10,3 +10,7 @@ prettytable-rs = "0.8.0"
 dotenv = "0.15.0"
 structopt = "0.3.21"
 colored = "2.0.0"
+anyhow = "1.0.38"
+thiserror = "1.0.23"
+derive_more = "0.99.11"
+once_cell = "1.5.2"
