--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ anyhow = "1.0.38"
 thiserror = "1.0.23"
 derive_more = "0.99.11"
 once_cell = "1.5.2"
+dotenv = "0.15.0"
+env_logger = "0.8.2"
+log = "0.4.14"
