--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ once_cell = "1.5.2"
 dotenv = "0.15.0"
 env_logger = "0.8.2"
 log = "0.4.14"
+termion = "1.5.6"
+serde = { version = "1.0.123", features = ["derive"] }
+config = "0.10.1"
+smart-default = "0.6.0"
