--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Luku <luku.3659@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-diesel = { version = "1.4.5", features = ["sqlite"] }
+diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
 prettytable-rs = "0.8.0"
 structopt = "0.3.21"
 colored = "2.0.0"
@@ -20,3 +20,4 @@ termion = "1.5.6"
 serde = { version = "1.0.123", features = ["derive"] }
 config = "0.10.1"
 smart-default = "0.6.0"
+chrono = "0.4.19"
