--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dirmarks"
-version = "0.2.2"
+version = "0.2.3"
 authors = ["Luku <luku.3659@gmail.com>"]
 edition = "2018"
 
@@ -18,6 +18,6 @@ env_logger = "0.9.0"
 log = "0.4.17"
 termion = "1.5.6"
 serde = { version = "1.0.137", features = ["derive"] }
-config = "0.13.1"
+envy = "0.4.2"
 smart-default = "0.6.0"
 chrono = "0.4.19"
