--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ serde = { version = "1.0.139", features = ["derive"] }
 envy = "0.4.2"
 smart-default = "0.6.0"
 chrono = "0.4.19"
+
+[dev-dependencies]
+serial_test = "*"
